# edX-Library

./: .actrc  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  SetupProject.bat  SetupProject.sh  docker-compose.yml  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  linux.yml  macos.yml  release.yml
cmake/: edx-toolchain.cmake  edx.cmake
docs/: CONTAINER.md  edx File Format Documentation.md
edX/config/: edX.rc  edXConfig.h  resource.h
edX/include/: edXLibraryFile.h  edXManager.h  edXProjectFile.h  edXTimeUtils.h
edX/includes/: edXLibraryFile.h  edXManager.h  edXProjectFile.h  edXTimeUtils.h
edX/src/: edXExample.cpp  edXLibraryFile.cpp  edXLibraryReader.cpp  edXLibraryWriter.cpp  edXManager.cpp  edXProjectFile.cpp  edXReader.cpp  edXTimeUtils.cpp  edXWriter.cpp
scripts/: ci-build.sh  ci-run-workflow.sh  increment_edx_build.py  set_edx_version.py
tests/: CMakeLists.txt  Catch2TestListener.h  LoggingIntegrationExample.cpp  SimpleTestHelper.h  TestListener.h  TestLogger.h
tests/edx_tests/: EdxDemoGenerator.cpp  EdxLibraryFileTest.cpp  EdxManagerTest.cpp  EdxProjectFileComprehensiveTest.cpp  EdxProjectFileTest.cpp  EdxTestMain.cpp
